fixed layout bugs

--- a/src/components/elements/CardBigList/cardBig.module.scss
+++ b/src/components/elements/CardBigList/cardBig.module.scss
@@ -108,8 +108,9 @@
 
 @media(max-width:450px) {
   .cardBig__description {
-    height: 500px;
+    height: 460px;
     max-width: 100%;
+    
     padding: 28px;
   }
 }
