--- a/src/components/elements/Footer/footer.module.scss
+++ b/src/components/elements/Footer/footer.module.scss
@@ -19,6 +19,8 @@
     display: flex;
     flex-wrap: wrap;
     column-gap: 116px;
+
+    margin-right: 25px;
   }
 
   &__mailbox {
