--- a/src/components/pages/SearchPage/searchPage.module.scss
+++ b/src/components/pages/SearchPage/searchPage.module.scss
@@ -1,6 +1,6 @@
 .searchPage {
   padding-top: 150px;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .panel {
@@ -25,6 +25,6 @@
   font-size: 28px;
 
   margin-bottom: 50px;
-  
+
   padding-top: 50px;
 }
